object injection, service and model project
Colocando injecao de objetos abstratos, injeção de dependencias e outros serviços.
Adicionado um projeto separado para models, e um projeto separado para os serviços.
Ambos projetos ja inseridos na API e retornando na /campeonatos

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 
 /FootAnalises/.vs
+/FootAnalises/bin
+/FootAnalises/bin
+/FootAnalises/bin/Debug/net8.0
+FootAnalises/bin/Debug/net8.0/FootAnalises.pdb
+*.exe
+*.dll
+*.pdb
+/FootAnalises/obj
+/FootAnalises/obj
