--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 
-/FootAnalises/.vs
-/FootAnalises/bin
-/FootAnalises/bin
-/FootAnalises/bin/Debug/net8.0
-FootAnalises/bin/Debug/net8.0/FootAnalises.pdb
 *.exe
 *.dll
 *.pdb
-/FootAnalises/obj
-/FootAnalises/obj
+/FootAnalises/.vs
+/FootAnalises/bin
+/Services/obj
