--- a/foot-web/angular.json
+++ b/foot-web/angular.json
@@ -32,7 +32,7 @@
               }
             ],
             "styles": [
-              
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "@flaticon/flaticon-uicons/css/all/all.css",
               "bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
@@ -101,7 +101,7 @@
               }
             ],
             "styles": [
-              
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "@flaticon/flaticon-uicons/css/all/all.css",
               "bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
